Patch from PR/39034 - should make this compile! I've not removed the mtx_destroy() since that has to be in there somewhere. Patch may apply to netbsd 5.0