sys/dev/if_ndis/if_ndis.c
@@ -35,7 +35,7 @@
 __FBSDID("$FreeBSD: src/sys/dev/if_ndis/if_ndis.c,v 1.69.2.6 2005/03/31 04:24:36 wpaul Exp $");
 #endif
 #ifdef __NetBSD__
-__KERNEL_RCSID(0, "$NetBSD: if_ndis.c,v 1.27 2009/04/18 14:58:03 tsutsui Exp $");
+__KERNEL_RCSID(0, "$NetBSD: if_ndis.c,v 1.28 2009/08/02 20:22:34 dsl Exp $");
 #endif
 
 
@@ -253,7 +253,7 @@ ndis_setmulti(struct ndis_softc *sc)
 		error = ndis_set_info(sc, OID_GEN_CURRENT_PACKET_FILTER,
 		    &sc->ndis_filter, &len);
         if (error) {
-		aprint_error_dev(sc->ndif_dev, "set filter failed: %d\n", 
+		aprint_error_dev(sc->ndis_dev, "set filter failed: %d\n", 
 			     error);
         }
 		return;
@@ -550,7 +550,7 @@ ndis_attach(dev)
 	}
 
 	/* Tell the user what version of the API the driver is using. */
-	aprint_normal_dev(&sc->ndis_dev, "NDIS API version: %d.%d\n",
+	aprint_normal_dev(sc->ndis_dev, "NDIS API version: %d.%d\n",
 		      sc->ndis_chars->nmc_version_major,
 		      sc->ndis_chars->nmc_version_minor);
 
@@ -2129,7 +2129,7 @@ ndis_ioctl(struct ifnet *ifp, u_long command, void *data)
 			error = ifmedia_ioctl(ifp, ifr, &sc->ifmedia, command);
 		break;
 	case SIOCSIFCAP:
-		if ((error = ether_ioctl(ifp, cmd, data)) == ENETRESET) {
+		if ((error = ether_ioctl(ifp, command, data)) == ENETRESET) {
 			ndis_set_offload(sc);
 			error = 0;
 		}
